--- a/src/Ubora.Web/Styles/page_components/nav_right.scss
+++ b/src/Ubora.Web/Styles/page_components/nav_right.scss
@@ -11,9 +11,23 @@
         @extend .nav;
         @extend .flex-column;
         padding-left: .8rem;
+
+        .nav-link {
+            color: $text-color;
+
+            &:active,
+            &:focus,
+            &:hover {
+                color: $blue;
+            }
+        }
     }
 
-    .nav-link.active::before {
-        @extend .active-nav-link;
+    .nav-link.active {
+        color: $blue;
+
+        &:before {
+            @extend .active-nav-link;
+        }
     }
 }
